--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Hardcore Chess"/>
     
+    <link rel="stylesheet" href="/vendor/chessreplay23/style.css"/>
+    <link rel="stylesheet" href="/vendor/chessreplay23/theme.css"/>
     <link rel="stylesheet" href="/vendor/chessboard23/style.css"/>
     <link rel="stylesheet" href="/vendor/chessboard23/theme.css"/>
     <link rel="stylesheet" href="/vendor/chessboard23/tatiana.css"/>
